<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Application name -->
	<string name="app_name">Facebook Client</string>
	
	<!-- User Activity -->
	<string name="activity_user_wall_title">%s\'s Wall</string>
	<string name="activity_user_button_wall">Show Wall</string>

	<!-- Feed Activity -->
	<string name="activity_feed_news_title">News Feed</string>
	<string name="activity_feed_profile_title">Wall</string>
	<string name="activity_feed_button_update">Update</string>
	<string name="activity_feed_post_details" formatted="false">%s  ·  Comments(%d)  ·  Likes(%d)</string>

	<!-- Friends Activity -->
	<string name="activity_friends_search">Search</string>

	<!-- Login Activity -->
	<string name="activity_login_content"><b>Facebook</b>\nClient\nExample</string>
	<string name="activity_login_button">Login</string>

	<!-- Main Activity -->
	<string name="activity_main_current_user">Current User</string>
	<string name="activity_main_options">Options</string>
	<string name="activity_main_button_news">News Feed</string>
	<string name="activity_main_button_wall">Wall</string>
	<string name="activity_main_button_friends">Friends</string>
	<string name="activity_main_button_profile">Profile</string>
	<string name="activity_main_button_chat">Chat</string>
	<string name="activity_main_button_logout">Logout</string>
	
	<!--  Chat Activity -->
	<string name="chat_title">Friends Online</string>
	<string name="chat_button_connect">Connect</string>
	<string name="chat_button_disconnect">Disconnect</string>
	<string name="chat_button_showlog">Show Log</string>
	
	<!--  Chat Session Activity -->
	<string name="chat_session_title">Chat with > %s</string>
	<string name="chat_session_button_send">Send</string>
	
	<!-- Post Activity -->
	<string name="activity_post_title">Comments</string>
	<string name="activity_post_button_send">Send</string>
	
	<!-- Profile Dialog -->
	<string name="dialog_profile_title">Profile</string>
	
</resources>
