<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<TextView
		style="@style/headerContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/chat_session_title"
		android:id="@+id/chat_session_title" />
	<LinearLayout
		style="@style/footerContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical"
		android:id="@+id/footer" >
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<Button
				style="@style/footerButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="5dp"
				android:text="@string/chat_session_button_send"
				android:id="@+id/chat_session_button_send" />
			<EditText
				style="@style/editText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@id/chat_session_button_send"
				android:id="@+id/chat_session_edit" />
		</RelativeLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:gravity="center" >
			<Button
				style="@style/footerButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/chat_button_connect"
				android:id="@+id/chat_button_connect" />
			<Button
				style="@style/footerButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/chat_button_disconnect"
				android:id="@+id/chat_button_disconnect" />
			<Button
				style="@style/footerButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/chat_button_showlog"
				android:id="@+id/chat_button_showlog" />
		</LinearLayout>
	</LinearLayout>
	<ScrollView
		style="@style/contentContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/chat_session_title"
		android:layout_above="@id/footer" >
		<TextView
			style="@style/contentText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/chat_session_text" />
	</ScrollView>
</RelativeLayout>
