<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		style="@style/headerContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:id="@+id/header" >
		<ImageView
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_marginRight="2dp"
			android:src="@drawable/pic_application_small" />
		<TextView
			style="@style/headerText"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/app_name" />
	</LinearLayout>
	
	<LinearLayout
		style="@style/footerContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:id="@+id/footer" >
		<Button
			style="@style/footerButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_main_button_logout"
			android:id="@+id/activity_main_button_logout" />
	</LinearLayout>
	
	<LinearLayout
		style="@style/contentContainer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/header"
		android:layout_above="@id/footer"
		android:orientation="vertical" >
		<TextView
			style="@style/separator"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/activity_main_current_user" />
		<include
			layout="@layout/view_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/activity_main_current_user" />
		<TextView
			style="@style/separator"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/activity_main_options" />
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<!-- TODO: Implement me as GridView -->
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
				<include
					layout="@layout/view_main_button"
					android:id="@+id/activity_main_button_news" />
				<include
					layout="@layout/view_main_button"
					android:id="@+id/activity_main_button_wall" />
				<include
					layout="@layout/view_main_button"
					android:id="@+id/activity_main_button_friends" />
				<include
					layout="@layout/view_main_button"
					android:id="@+id/activity_main_button_chat" />
				<include
					layout="@layout/view_main_button"
					android:id="@+id/activity_main_button_profile" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>

</RelativeLayout>
